# tree-sitter-zolo

./: .gitignore  Cargo.toml  README.md  grammar.js  package-lock.json  package.json  tree-sitter.json
bindings/rust/: build.rs  lib.rs
editors/nvim/: README.md
editors/nvim/ftdetect/: zolo.lua
editors/nvim/ftplugin/: zolo.lua
editors/nvim/plugin/: zolo.lua
editors/nvim/queries/zolo/: indents.scm  locals.scm
editors/nvim/scripts/: sync-queries.ps1  sync-queries.sh
queries/: folds.scm  highlights.scm  injections.scm  locals.scm
src/: grammar.json  node-types.json
test/corpus/: control_flow.txt  decorators.txt  enums.txt  functions.txt  generators.txt  generics.txt  macros.txt  match.txt  modern_features.txt  more_features.txt  optional_chaining.txt  pipes.txt  strings.txt  structs.txt  syntax_sugar.txt  temporal.txt
