[package]
name = "tree-sitter-zolo"
description = "Zolo grammar for tree-sitter"
version = "0.1.0"
authors = ["Zolo Lang authors"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "zolo"]
categories = ["parser-implementations", "parsing"]
repository = "https://github.com/devzolo/zolo-lang"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.0"
